# petisco

./: .coveragerc  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  codecov.yml  index.html  lume.yml  mkdocs.yml  mypy.ini  pytest.coverage.ini  pytest.end2end.ini  pytest.ini  ruff.toml  setup.cfg  setup.legacy.py  setup.py  sitemap.xml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature-request.yml
.github/workflows/: ci.macos.yml  ci.yml  coverage.yml  docs.yml  pypi.yml
acknowledgements/: index.html
application/: index.html
asyncio/: index.html
changelog/: index.html
cli/: index.html
configuration/: index.html
contributing/: index.html
databases/: index.html
doc/: EventBus.md
doc/events/: EventBus.md  EventManagement.md
doc/message_broker/: MessageBroker.md
docs/: acknowledgements.md  application.md  asyncio.md  changelog.md  cli.md  configuration.md  contributing.md  databases.md  domain.md  getting_started.md  index.md  install.md
docs/js/: termynal.js
docs/migrations/: from_v1_to_v2.md
domain/: index.html
examples/fastapi/: main.py
examples/message/: pyperf_comparative.py  timeit_benchmark.py
examples/notifier/: slack_notifier.py
examples/persistence/: run_async_sql_database.py  run_sql_database.py  (+1 more)
getting_started/: index.html
install/: index.html
petisco/: DEPLOY  VERSION  __init__.py  public_api.py
requirements/: dev-requirements.txt  dev.txt  docs-requirements.txt  requirements.txt
search/: search_index.json
tests/: conftest.py  fixtures.py
(+1290 files in other folders)
